fixed align

--- a/assets/css/sidenav.styl
+++ b/assets/css/sidenav.styl
@@ -237,6 +237,7 @@
                     .stack-align
                         display table-cell
                         vertical-align middle
+                        text-align center
                         span.fa-stack
                             i
                                 transition font-size 300ms ease-in-out, top 300ms ease-in-out, left 300ms ease-in-out
